# ArtBot

./: .env.sample  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  render.yaml
data/articles/: about-the-onhold-devices-folder.md  accepted-payment-methods.md  add-1-or-multiple-assets-to-many-playlists-at-the-same-time.md  adjust-the-gpu-memory-on-the-raspberry-pi.md  adjusting-social-news-wall-speeds.md  advanced-custom-domain-mapping.md  advanced-enforce-sso-login-for-your-account.md  advanced-how-to-assign-security-for-users-to-only-edit-certain-zones-of-the-scre.md  advanced-how-to-install-activate-optisigns-remote-agent-on-windows.md  advanced-how-to-manually-install-activate-optisigns-remote-agent-on-linux-or-ras.md  advanced-playlist-item-playback-control-campaign-management.md  advanced-proof-of-play-or-playback-report.md  advanced-security-managing-user-roles.md  ai-camera-app-quick-start.md  amazon-fire-stick-and-security-considerations.md  amazon-firestick.md  amazon-signage-stick.md  amazon-tv-firestick-troubleshooting-guide.md  android-tv-chromecast.md  animation.md  api-reference.md  apple-tv-player-release-notes-limitations.md  assign-content-to-your-screens.md  assign-default-content-for-schedules.md  audience-intelligence-ai-camera-faqs.md  billing-how-do-i-change-my-subscription-plan.md  brand-kit-and-enforcing-brand-guidelines.md  brightsign-players.md  build-integration-using-optisigns-enterprise-app.md  chromeos-pwa-instructions.md  (+374 more)
scripts/: ask.py  create_assistant.py
tests/: test_convert.py  test_diff.py  test_live_smoke.py
(+6 files in other folders)
