[project]
name = "articlebots"
version = "0.1.0"
description = "Sync a Zendesk help center into an OpenAI vector store, daily"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "markdownify>=1.2.3",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.4",
    "pytest>=9.1.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: needs a real OPENAI_API_KEY and network access",
]
addopts = "-m 'not live'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/articlebots"]
